refactoring; moved refresh token logic to separate service; added JwtService for moving similar logic of handling tokens in separate class